force-app/main/default/objects/ExternalUser__c/ExternalUser__c.object-meta.xml
<CustomObject>
    <label>ExternalUser</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExternalUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>