force-app/main/default/objects/ExternalUser__c/fields/PassportID__c.field-meta.xml
<CustomField>
    <fullName>PassportID__c</fullName>
    <label>PassportID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>