force-app/main/default/objects/ExternalUser__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>