force-app/main/default/objects/ExternalUser__c/fields/PaymentHistory__c.field-meta.xml
<CustomField>
    <fullName>PaymentHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentHistory</label>
    <referenceTo>PaymentHistory__c</referenceTo>
    <relationshipLabel>ExternalUsers</relationshipLabel>
    <relationshipName>ExternalUsers</relationshipName>
    <type>Lookup</type>
</CustomField>