force-app/main/default/objects/ExternalUser__c/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SecurityToken</label>
    <referenceTo>SecurityToken__c</referenceTo>
    <relationshipLabel>ExternalUsers</relationshipLabel>
    <relationshipName>ExternalUsers</relationshipName>
    <type>Lookup</type>
</CustomField>